# bits-knn-jpdc2024

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  MANUAL-BUILD.md  README.md  adalovelace-build.sh  ampere-build.sh  bw-build.sh  format.sh  hopper-build.sh  licenses.txt  local-build.sh  update.sh  volta-build.sh
data/: bitonic-sort-ampere01-108429.csv  bitonic-sort-ampere01-108429.err  bitonic-sort-ampere02-108430.csv  bitonic-sort-hopper01-108431.csv  bitonic-sort-volta05-108428.csv  buffer-ampere01-108404.csv  buffer-ampere01-108404.err  buffer-ampere01-108409.csv  buffer-ampere01-108415.csv  buffer-ampere01-108415.err  buffer-ampere02-108405.csv  buffer-ampere02-108411.csv  buffer-ampere02-108413.csv  buffer-ampere02-108413.err  buffer-hopper01-108407.csv  buffer-hopper01-108408.csv  buffer-hopper01-108412.csv  buffer-hopper01-108412.err  buffer-volta05-108406.csv  buffer-volta05-108410.csv  buffer-volta05-108410.err  buffer-volta05-108414.csv  buffer-volta05-108414.err  distances-ampere01-108422.csv  distances-ampere01-108422.err  distances-ampere02-108420.csv  distances-hopper01-108423.csv  distances-volta05-108421.csv  fused-ampere01-108419.csv  fused-ampere01-108419.err  fused-ampere02-108417.csv  fused-ampere02-108417.err  fused-cache-params-hopper01-108244.err  fused-cache-params-hopper01-108249.err  fused-cache-params-volta05-108238.err  fused-hopper01-108416.csv  fused-hopper01-108416.err  fused-params-ampere02-108259.err  fused-volta05-108418.csv  fused-volta05-108418.err  (+21 more)
docs/: algorithms.md  data-format.md  knn.md  manual-build.md  used-setup.md
include/bits/: array_view.hpp  block_array_utils.cuh  cuch.hpp  cuda_allocators.hpp  cuda_array.hpp  cuda_event.hpp  cuda_knn.hpp  cuda_ptr.hpp  cuda_stream.hpp  dynamic_switch.hpp  expand.hpp  identity_preprocessor.hpp  knn.hpp  knn_args.hpp  layout.hpp  memory.cuh  ptx_utils.cuh  (+7 more)
plots/: bitonic-sort-ampere01-108429.csv  bitonic-sort-ampere02-108430.csv  bitonic-sort-hopper01-108431.csv  bitonic-sort-volta05-108428.csv  buffer-ampere01-108404.csv  buffer-ampere01-108409.csv  buffer-ampere01-108415.csv  buffer-ampere02-108405.csv  buffer-ampere02-108411.csv  buffer-ampere02-108413.csv  buffer-hopper01-108407.csv  buffer-hopper01-108408.csv  buffer-hopper01-108412.csv  buffer-volta05-108406.csv  buffer-volta05-108410.csv  buffer-volta05-108414.csv  distances-ampere01-108422.csv  distances-ampere02-108420.csv  distances-hopper01-108423.csv  distances-volta05-108421.csv  extra-distances-ampere01-108422.csv  extra-distances-ampere02-108420.csv  extra-distances-hopper01-108423.csv  extra-distances-volta05-108421.csv  fused-ampere01-108419.csv  fused-ampere02-108417.csv  fused-hopper01-108416.csv  fused-volta05-108418.csv  kselection-ampere01-108426.csv  kselection-ampere02-108427.csv  kselection-hopper01-108424.csv  kselection-volta05-108425.csv  multibuffer-ampere01.csv  multibuffer-ampere02.csv  multibuffer-hopper01.csv  multibuffer-volta05.csv
scripts/: config.sh  executor.sh  mean-time-dist-fixed-max_slowdown.csv  mean-time-dist-with-slowdown.csv  mean-time-fixed-max_slowdown.csv  optima-dist-fixed-max_slowdown.csv  optima-dist.csv  optima-fixed-max_slowdown.csv  optima.csv  plot-all.sh  plot-analyze-dist.py  plot-analyze-opt.py  plot-bitonic-sort.py  plot-bits-sq.py  plot-distances.py  plot-eval.py  plot-fused-config.py  plot-fused-params.py  plot-fused.py  plot-gpu-speedup.py  plot-gpu-transfers.py  plot-kselection-query.py  plot-kselection-sp-untuned.py  plot-kselection-sp.py  plot-kselection.py  plot-multibuffer.py  plot-opt-bitonic-sort.py  plot-opt-buffer.py  plot-opt-ipt.py  plot-opt-two-stage.py  plot-params-block-select.py  plot-params-warp-select.py  run-bitonic-sort.sh  run-bits-sq.sh  run-buffer.sh  run-distances.sh  run-eval-mq.sh  run-fused-cache-params.sh  run-fused-params.sh  run-fused.sh  (+16 more)
src/: cuda_knn.cpp  cuda_stream.cu  gen.py  knn.cpp  main.cpp  verify.cpp
src/topk/multipass/: CMakeLists.txt  air_topk.cu  bits_global.cu  radik_knn.cu
src/topk/multipass/detail/: CMakeLists.txt  bts_global_10_1024.cu  bts_global_10_128.cu  bts_global_10_2048.cu  bts_global_10_256.cu  bts_global_10_512.cu  bts_global_11_1024.cu  bts_global_11_128.cu  bts_global_11_2048.cu  bts_global_11_256.cu  bts_global_11_512.cu  bts_global_12_1024.cu  bts_global_12_128.cu  bts_global_12_2048.cu  bts_global_12_256.cu  bts_global_12_512.cu  bts_global_13_1024.cu  bts_global_13_128.cu  bts_global_13_2048.cu  bts_global_13_256.cu  bts_global_13_512.cu  bts_global_14_1024.cu  bts_global_14_128.cu  bts_global_14_2048.cu  bts_global_14_256.cu  bts_global_14_512.cu  bts_global_15_1024.cu  bts_global_15_128.cu  bts_global_15_2048.cu  bts_global_15_256.cu  bts_global_15_512.cu  bts_global_16_1024.cu  bts_global_16_128.cu  bts_global_16_2048.cu  bts_global_16_256.cu  bts_global_16_512.cu  bts_global_1_1024.cu  bts_global_1_128.cu  bts_global_1_2048.cu  bts_global_1_256.cu  (+41 more)
src/topk/singlepass/: CMakeLists.txt  bits_knn.cu  cub_knn.cu  fused_cache_knn.cu  fused_knn.cu  fused_tc_knn.cu  grid_select.cu  partial_bitonic.cu  partial_bitonic_buffered.cu  raft_warpsort.cu  rapidsai_fused.cu  warp_select.cu
src/topk/singlepass/detail/: CMakeLists.txt  bts_1024_10_128.cu  bts_1024_10_256.cu  bts_1024_10_512.cu  bts_1024_11_128.cu  bts_1024_11_256.cu  bts_1024_11_512.cu  bts_1024_12_128.cu  bts_1024_12_256.cu  bts_1024_12_512.cu  bts_1024_13_128.cu  bts_1024_13_256.cu  bts_1024_13_512.cu  bts_1024_14_128.cu  bts_1024_14_256.cu  bts_1024_14_512.cu  bts_1024_15_128.cu  bts_1024_15_256.cu  bts_1024_15_512.cu  bts_1024_16_128.cu  bts_1024_16_256.cu  bts_1024_16_512.cu  bts_1024_1_128.cu  bts_1024_1_256.cu  bts_1024_1_512.cu  bts_1024_2_128.cu  bts_1024_2_256.cu  bts_1024_2_512.cu  bts_1024_3_128.cu  bts_1024_3_256.cu  bts_1024_3_512.cu  bts_1024_4_128.cu  bts_1024_4_256.cu  bts_1024_4_512.cu  bts_1024_5_128.cu  bts_1024_5_256.cu  bts_1024_5_512.cu  bts_1024_6_128.cu  bts_1024_6_256.cu  bts_1024_6_512.cu  (+1101 more)
tests/: CMakeLists.txt  README.md  array_view_test.cpp  bitonic_sort_regs_test.cu  transpose_test.cu
(+130 files in other folders)
